--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components/shopping-cart.css">
     <title>Carrito de Compras</title>
+
+    <script src="js/include-html.js"></script>
 </head>
 
 <body>
+
+    <!-- *Header* -->
+    <div data-include="/components/header.xml"></div>
 
     <main class="main-cart">
 
@@ -142,6 +147,9 @@
         </section>
 
     </main>
+
+    <!-- *Footer* -->
+    <div data-include="/components/footer.html"></div>
 </body>
 
 
