--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -50,80 +50,6 @@
 
                 <tbody class="table-cart__body">
 
-                    <tr class="table-cart__row-content">
-
-                        <td class="table-cart__data">
-                            <img class="table-cart__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
-                                alt="Hamburguesa la Fundadora">
-                        </td>
-
-                        <td class="table-cart__data">
-                            <div class="table-cart__text">
-                                <h4>Hamburguesa La Fundadora</h4>
-                                <h5 class="price-by-unit">$ 15.000</h5>
-                            </div>
-                        </td>
-
-                        <td class="table-cart__data">
-                            <h4>$ 15.000</h4>
-                        </td>
-
-                        <td class="table-cart__data">
-                            <div class="table-cart__quantity card__quantity-btn">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M200-450v-60h560v60H200Z" />
-                                </svg>
-                                <span class="card__num-items">1</span>
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
-                                </svg>
-                            </div>
-                        </td>
-
-                        <td class="table-cart__data ">
-                            <h4>$ 15.000</h4>
-                        </td>
-                    </tr>
-
-                    <tr class="table-cart__row-content">
-
-                        <td class="table-cart__data">
-                            <img class="table-cart__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
-                                alt="Hamburguesa la Fundadora">
-                        </td>
-
-                        <td class="table-cart__data">
-                            <div class="table-cart__text">
-                                <h4>Hamburguesa La Fundadora</h4>
-                                <h5 class="price-by-unit">$ 15.000</h5>
-                            </div>
-                        </td>
-
-                        <td class="table-cart__data">
-                            <h4>$ 15.000</h4>
-                        </td>
-
-                        <td class="table-cart__data">
-                            <div class="table-cart__quantity card__quantity-btn">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M200-450v-60h560v60H200Z" />
-                                </svg>
-                                <span class="card__num-items">1</span>
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
-                                </svg>
-                            </div>
-                        </td>
-
-                        <td class="table-cart__data ">
-                            <h4>$ 15.000</h4>
-                        </td>
-                    </tr>
-
                 </tbody>
 
                 <tfoot class="table-cart__footer">
@@ -150,6 +76,48 @@
 
     <!-- *Footer* -->
     <div data-include="/components/footer.html"></div>
+
+    <!-- Template -->
+    <template id="template-shopping-cart">
+        <tr class="table-cart__row-content">
+
+            <td class="table-cart__data">
+                <img class="table-cart__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
+                    alt="Hamburguesa la Fundadora">
+            </td>
+
+            <td class="table-cart__data">
+                <div class="table-cart__text">
+                    <h4 class="table-cart__title"></h4>
+                    <h5 class="table-cart__price"></h5>
+                </div>
+            </td>
+
+            <td class="table-cart__data">
+                <h4 class="table-cart__price-by-unit"></h4>
+            </td>
+
+            <td class="table-cart__data">
+                <div class="table-cart__quantity card__quantity-btn">
+                    <svg class="card__remove icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                        viewBox="0 -960 960 960" width="48">
+                        <path d="M200-450v-60h560v60H200Z" />
+                    </svg>
+                    <input type="number" class="table-cart__num-items card__num-items"></input>
+                    <svg class="card__add icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
+                        width="48">
+                        <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
+                    </svg>
+                </div>
+            </td>
+
+            <td class="table-cart__data ">
+                <h4 class="card__value-total"></h4>
+            </td>
+        </tr>
+    </template>
+
+    <script type="module" src="js/script.js"></script>
 </body>
 
 
